Summary of Changes for Proof General 2.1
----------------------------------------

* Documentation improvements.   
  Text added for Coq mode.

* In proof-site.el, the environment variable PROOFGENERAL_ASSISTANTS 
  is examined for the default value of proof-assistants.  This
  means that no editing of proof-site.el should normally be 
  needed now. 

* Support for x-symbol package to beautify 
  input and output with special fonts.
  Patches for Isabelle provided by David von Oheimb.
  (currently incomplete)

* Bug fix for templates in Isabelle theory file mode.

* Bug fix for long-lines with funny characters causing
  ^G's in Solaris.

* Bug fix for case-insensitive matching.  Added 
  proof-case-fold-search configuration variable to
  allow for proof script languages with case-insensitive 
  syntax.

* Other minor bug fixes.